# analytics-api

./: .env.db  .env.pgadmin  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
scripts/: wait_for_db.py
src/: main.py
src/api/db/: session.py
src/api/events/: __init__.py  models.py  routing.py
