[project]
name = "analytics-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi==0.115.1",
    "uvicorn",
    "gunicorn",
    "sqlmodel",
    "pydantic",
    "sqlalchemy",
    "timescaledb",
    "requests",
    "python-decouple",
    "psycopg[binary]",
    "loguru>=0.7.3",
    "black>=25.1.0",
]
